--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header class="header">
     <div class="logo">
-        <img src="" alt="Logo AVL" width="200"> AVL
+        <img src="" alt="" width="200"> AVL
     </div>
 </header>
 
